--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,18 @@
             <scope>test</scope>
         </dependency>
 
+
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
+            <artifactId>slf4j-api</artifactId>
             <version>2.0.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.11</version>
+            <scope>test</scope>
         </dependency>
 
 
@@ -64,7 +72,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.cardio_generator.Main</mainClass>
+                            <mainClass>com.cardio_generator.HealthDataSimulator</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
